Reformatted. Fixed some display issues with tooltips. Added hide accelerator capabilities for the default popupComponent.